# mask_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  TRAINING.md
notebooks/: face_mask_training.ipynb  video_mask_inference.ipynb
scripts/: run_video_inference.py
src/mask_detection/: __init__.py  config.py  face_detector.py  mask_classifier.py  pipeline.py  video.py
tests/: test_pipeline.py
