[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mask-detection"
version = "1.0.0"
description = "Real-time face mask detection using OpenCV SSD face detection and a MobileNetV2 classifier"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["computer-vision", "face-detection", "mask-detection", "tensorflow", "opencv"]
dependencies = [
    "tensorflow>=2.12",
    "opencv-python>=4.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
train = [
    "scikit-learn>=1.1",
    "matplotlib>=3.5",
    "imutils>=0.5",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D203", "D213"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
